sass/abridge.scss
/* ... */
@if $typography {
  .c {
    text-align: center;// The <center> does not pass validation, use: <div class="c"></div>
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    padding-left: 0;
    color: var(--f2);
    margin-bottom: var(--s1);
    margin-top: var(--s2);
    font-weight: var(--fh);
    font-size: var(--fs);
    line-height: var(--lhh);
  }
  h1 {
    font-size: 2rem;
  }
  h2 {
    font-size: 1.75rem;
  }
  h3 {
    font-size: 1.5rem;
  }
  h4 {
    font-size: 1.25rem;
  }
  h5 {
    font-size: 1.125rem;
  }
  header h1 {
    margin-top: 0;
  }
  a {
    color: var(--a1);
    text-decoration: none;
    font-weight: 500;
  }
  a:hover {
    color: var(--a2);
    text-decoration: underline;
  }
  h1 a, h2 a, a.si, main nav a, nav > div > a {
    color: var(--f2);
    text-decoration: none;
    font-weight: var(--fh);
    &:hover {
      color: var(--a3);
      text-decoration: none;
    }
  }
  article {
    padding-bottom: .2rem;
  }

  // Abbreviations
  // 1. Remove underline decoration in Chrome, Edge, IE, Opera, and Safari
  abbr[title] {
    border-bottom: var(--bw) dotted;
    text-decoration: none; // 1
    cursor: help;
  }

  // Highlighted text
  mark {
    background-color: var(--c4);
    color: var(--c1);
    vertical-align: baseline;
    padding: .1rem .4rem;
  }
  blockquote {
    margin-left: 0;
    padding: .5rem 0 .5rem 1.5rem;
    border-left: .25rem solid var(--c3);
  }
  blockquote > :last-child {
    margin-bottom: 0;
  }
  small {
    font-size: .875rem;
  }

  .footnote-definition sup, .footnote-definition p {
    display: inline;
  }
  // Prevent sub and sup elements from affecting the line height in all browsers.
  sub,
  sup {
    font-size: .75em;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }
  sub {
    bottom: -.25em;
  }
  sup {
    top: -.5em;
  }

  address,
  blockquote,
  dl,
  figure,
  form,
  ol,
  p,
  pre,
  table,
  ul {
    margin: .7rem 0;
    color: var(--f1);
    font-style: normal;
    font-weight: var(--fw);
    font-size: var(--fs);
  }

  // Lists
  ul,
  ol {
    padding-right: 0;
    padding-left: var(--s2);
  }
  li {
    margin-bottom: 0.2rem;
  }

  ul li {
    list-style: square;
  }

  // Ins
  ins {
    color: var(--cg);
    text-decoration: none;
  }

  // del
  del {
    color: var(--cr);
  }
}
@if $sectioning {
  // https://github.com/picocss/pico
  // Render the `main` element consistently in IE
  main {
    display: flex;
    // should always have a single div that holds all content below main.
    // TOC or Recent Posts are the only other sections that would be directly under main.
    article, div {
      flex: 1 1 0;
      min-width: 0;
    }
  }

  body {
    width: 100%;
    margin: 0;
  }

  header,
  main,
  footer {
    width: 100%;
    margin-right: auto;
    margin-left: auto;

    // Semantic container
    @if $enable-semantic-container {
      padding: var(--s1);

      // Centered viewport max-width only
      @if $enable-maxwidth {
        @media (min-width: $mb) {
            min-width: $mb;
            max-width: $mw;
        }
      }
      // Centered viewport
      @else if $enable-viewport {
        @if map-get($breakpoints, "sm") and $enable-viewport {
          @media (min-width: map-get($breakpoints, "sm")) {
            max-width: map-get($viewports, "sm");
            //padding-right: 0;
            //padding-left: 0;
            .toc {
              display: none;
            }
          }
        }
        @if map-get($breakpoints, "md") and $enable-viewport {
          @media (min-width: map-get($breakpoints, "md")) {
            max-width: map-get($viewports, "md");
          }
        }
        @if map-get($breakpoints, "lg") and $enable-viewport {
          @media (min-width: map-get($breakpoints, "lg")) {
            max-width: map-get($viewports, "lg");
          }
        }
        @if map-get($breakpoints, "xl") and $enable-viewport {
          @media (min-width: map-get($breakpoints, "xl")) {
            max-width: map-get($viewports, "xl");
          }
        }
      }
    }
    // Semantic container
    @else {
      padding: var(--s1) 0;
    }
  }
  header, main {
    padding-top: 0;
    margin-top: 0;
    padding-bottom: 0;
    margin-bottom: 0;
    hr {
      margin:0.1rem 0;
    }
  }
  footer{
    line-height: var(--lhh);
    hr, p {
      margin: 0.2rem 0;
    }
  }
}
/* ... */

